codegen/ui_tests/export_mod_path_attr.stderr
error: expecting attribute name
  --> ui_tests/export_mod_path_attr.rs:11:11
   |
11 | #[rhai_fn(rhai::name = "thing")]
   |           ^^^^
